header, create btn, form to create without validation and datepicker

--- a/own/react/TaskManagement/app.json
+++ b/own/react/TaskManagement/app.json
@@ -1,4 +1,10 @@
 {
   "name": "TaskManagement",
-  "displayName": "TaskManagement"
+  "displayName": "TaskManagement",
+  "slug": "my-app",
+  "sdkVersion": "52.0.0",
+
+  "expo-runtime-version": "1.0.0",
+  "expo-channel-name": "1.0.0"
+  
 }
