--- a/own/react/TaskManagement/package.json
+++ b/own/react/TaskManagement/package.json
@@ -11,28 +11,38 @@
     "windows": "react-native run-windows"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.74.0-rc.9",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-picker/picker": "react-native-picker/picker",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
+    "expo": "^52.0.0",
+    "moment": "^2.30.1",
+    "react": "18.3.1",
+    "react-native": "^0.76.6",
+    "react-native-date-picker": "^5.0.8",
     "react-native-element-dropdown": "^2.12.4",
-    "react-native-windows": "0.74.0"
+    "react-native-gesture-handler": "^2.22.0",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-windows": "0.76.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.74.81",
-    "@react-native/eslint-config": "0.74.81",
-    "@react-native/metro-config": "0.74.81",
-    "@react-native/typescript-config": "0.74.81",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "metro-config": "^0.80.12",
-    "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/runtime": "^7.26.0",
+    "@react-native/babel-preset": "0.76.6",
+    "@react-native/eslint-config": "0.76.6",
+    "@react-native/metro-config": "0.76.6",
+    "@react-native/typescript-config": "0.76.6",
+    "@types/react": "^19.0.7",
+    "@types/react-native": "^0.73.0",
+    "@types/react-test-renderer": "^19.0.0",
+    "babel-jest": "^29.7.0",
+    "eslint": "^9.18.0",
+    "jest": "^29.7.0",
+    "metro-config": "^0.81.0",
+    "prettier": "3.4.2",
+    "react-test-renderer": "19.0.0",
+    "typescript": "5.7.3"
   },
   "engines": {
     "node": ">=18"
