--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
-    "@react-native-picker/picker": "react-native-picker/picker",
+    "@react-native-picker/picker": "2.9.0",
+    "@react-native-vector-icons/fontawesome6": "^6.7.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
-    "expo": "^52.0.0",
+    "expo": "^52.0.27",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "^0.76.6",
@@ -23,7 +24,8 @@
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "^2.22.0",
     "react-native-safe-area-context": "^5.1.0",
-    "react-native-windows": "0.76.5"
+    "react-native-windows": "0.76.5",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
